--- a/app/static/css/common.less
+++ b/app/static/css/common.less
@@ -15,6 +15,14 @@ input {
     outline:none;
 }
 
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 .float-left {
     float: left;
 }
